force-app/main/default/objects/numm__Edition__c/numm__Edition__c.object-meta.xml
<CustomObject>
    <label>Edition</label>
    <nameField>
        <displayFormat>E-{00000}</displayFormat>
        <label>Editions Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Editions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>