force-app/main/default/objects/numm__Edition__c/fields/numm__Collectif__c.field-meta.xml
<CustomField>
    <fullName>numm__Collectif__c</fullName>
    <label>Collectif</label>
    <length>255</length>
    <type>Text</type>
</CustomField>