force-app/main/default/objects/numm__Edition__c/fields/numm__Documents__c.field-meta.xml
<CustomField>
    <fullName>numm__Documents__c</fullName>
    <label>Documents</label>
    <type>Url</type>
</CustomField>