force-app/main/default/objects/numm__Edition__c/fields/numm__endMonth__c.field-meta.xml
<CustomField>
    <fullName>numm__endMonth__c</fullName>
    <defaultValue>MONTH( TODAY() )</defaultValue>
    <label>Fin du mois</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>