force-app/main/default/objects/numm__Edition__c/fields/numm__Entite__c.field-meta.xml
<CustomField>
    <fullName>numm__Entite__c</fullName>
    <label>Entite</label>
    <length>255</length>
    <type>Text</type>
</CustomField>