force-app/main/default/objects/numm__Edition__c/fields/numm__Etablissement__c.field-meta.xml
<CustomField>
    <fullName>numm__Etablissement__c</fullName>
    <label>Etablissement</label>
    <length>255</length>
    <type>Text</type>
</CustomField>