force-app/main/default/objects/numm__Edition__c/fields/numm__Etat__c.field-meta.xml
<CustomField>
    <fullName>numm__Etat__c</fullName>
    <label>Etat</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Veuillez choisir...</fullName>
                <default>true</default>
                <label>Veuillez choisir...</label>
            </value>
            <value>
                <fullName>Balance générale</fullName>
            </value>
            <value>
                <fullName>Balance auxiliaire</fullName>
            </value>
            <value>
                <fullName>Balance par analytique</fullName>
            </value>
            <value>
                <fullName>Journaux comptables</fullName>
            </value>
            <value>
                <fullName>Journal centralisateur</fullName>
            </value>
            <value>
                <fullName>Grand livre général</fullName>
            </value>
            <value>
                <fullName>Grand livre analytique</fullName>
            </value>
            <value>
                <fullName>Bilan et compte de résultat</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>