force-app/main/default/objects/numm__Edition__c/fields/numm__Export__c.field-meta.xml
<CustomField>
    <fullName>numm__Export__c</fullName>
    <label>Export</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PDF</fullName>
                <default>true</default>
                <label>PDF</label>
            </value>
            <value>
                <fullName>Excel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>