force-app/main/default/objects/numm__Edition__c/fields/numm__Flux__c.field-meta.xml
<CustomField>
    <fullName>numm__Flux__c</fullName>
    <label>Flux</label>
    <length>255</length>
    <type>Text</type>
</CustomField>