force-app/main/default/objects/numm__Edition__c/fields/numm__Header__c.field-meta.xml
<CustomField>
    <fullName>numm__Header__c</fullName>
    <description>Store a json of header details for the report</description>
    <inlineHelpText>Store a json of header details for the report</inlineHelpText>
    <label>Header</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>