force-app/main/default/objects/numm__Edition__c/fields/numm__Journal__c.field-meta.xml
<CustomField>
    <fullName>numm__Journal__c</fullName>
    <label>Journal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>