force-app/main/default/objects/numm__Edition__c/fields/numm__Query__c.field-meta.xml
<CustomField>
    <fullName>numm__Query__c</fullName>
    <description>store soql to get all data for report</description>
    <inlineHelpText>store soql to get all data for report</inlineHelpText>
    <label>Query</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>