force-app/main/default/objects/numm__Edition__c/fields/numm__startMonth__c.field-meta.xml
<CustomField>
    <fullName>numm__startMonth__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Début du mois</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>