force-app/main/default/objects/numm__Edition__c/fields/numm__startYear__c.field-meta.xml
<CustomField>
    <fullName>numm__startYear__c</fullName>
    <defaultValue>TEXT(YEAR( TODAY() ))</defaultValue>
    <label>Debut d&#39;année</label>
    <length>4</length>
    <type>Text</type>
</CustomField>