force-app/main/default/objects/numm__Edition__c/fields/numm__Status__c.field-meta.xml
<CustomField>
    <fullName>numm__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Server Request</fullName>
                <default>true</default>
                <label>Server Request</label>
            </value>
            <value>
                <fullName>Process Data</fullName>
            </value>
            <value>
                <fullName>Document Creation</fullName>
            </value>
            <value>
                <fullName>Save Document</fullName>
            </value>
            <value>
                <fullName>Fail</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>